# Math4Fries

./: .gitignore  LICENSE  README.md
Linking_Example/: CMakeLists.txt
Linking_Example/src/: main.c
Matrix_Utilities_4_C/: CMakeLists.txt  Matrix_Accel.c  Matrix_Accel.h  matrix_library_basis.c  tester.c
Matrix_Utilities_4_C/deprecated/: matrix_library_basis.c
Matrix_Utilities_4_C/include/: Matrix_Accel.h
cubic_spline_fitting/: general_cubic_spline_fit.c  joseph_output.txt  pogin.txt  pogout.txt  print_splines.py  run_it.sh
polynomial_regression/cubic_poly_regression/: cubic_poly_regression.c
scripts/: build_project  new_package
